[package]
name = "time-issue-replication"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Phil Markgraf <philip.markgraf@kel.vin>"]
readme = "README.md"
description = "Replicates timer issue in embassy when using TIM1, TIM16, or TIM17 as the main source of time."
repository = "https://github.com/ShakenCodes/time-issue-replication"
keywords = ["no-std", "embedded"]
categories = ["Embedded development", "No standard library"]

[dependencies]
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
# Change stm32wl55jc-cm4 to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", features = [
    "nightly",
    "unstable-traits",
    "stm32wl55jc-cm4",
    "time-driver-any",
    "memory-x",
    "unstable-pac",
    "exti",
    "chrono",
] }
embassy-executor = { version = "0.3.3", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-time = { version = "0.1.5", features = [
    "nightly",
    "unstable-traits",
    "tick-hz-32_768",
] }
panic-probe = { version = "0.3" }
rtt-target = { version = "0.3.1", features = [
    "cortex-m",
] } # back-version due to https://github.com/probe-rs/rtt-target/issues/33

[profile.release]
debug = 2

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/ShakenCodes/embassy", rev = "a44ff5bfb5d5bd01f7b2aac60bbd1296ab492ac9" }
embassy-executor = { git = "https://github.com/ShakenCodes/embassy", rev = "a44ff5bfb5d5bd01f7b2aac60bbd1296ab492ac9" }
embassy-sync = { git = "https://github.com/ShakenCodes/embassy", rev = "a44ff5bfb5d5bd01f7b2aac60bbd1296ab492ac9" }
embassy-time = { git = "https://github.com/ShakenCodes/embassy", rev = "a44ff5bfb5d5bd01f7b2aac60bbd1296ab492ac9" }
embassy-embedded-hal = { git = "https://github.com/ShakenCodes/embassy", rev = "a44ff5bfb5d5bd01f7b2aac60bbd1296ab492ac9" }
